--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@
         format("woff2");
 }
 .fab {
-    font-family: "Font Awesome 5 Brands", serif;
+    font-family: "Font Awesome 5 Brands";
 }
 
 
