--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body{
     font-family: -apple-system, Inter, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 .fab {
     -moz-osx-font-smoothing: grayscale;
