--- a/main.css
+++ b/main.css
@@ -96,6 +96,7 @@ body {
 }
 h1 {
     margin-top: 0;
+    margin-bottom: 0.5rem;
 }
 a {
     color: #007bff;
@@ -118,16 +119,13 @@ a:not([href]):not([class]):hover {
     font: inherit;
     -webkit-appearance: button;
 }
-h1 {
-    margin-bottom: 0.5rem;
-}
 .lead {
+    text-transform: uppercase;
     font-size: 1.25rem;
-}
-.lead {
     font-weight: 300;
 }
 .display-1 {
+    text-transform: uppercase;
     font-weight: 300;
     line-height: 1.2;
 }
@@ -141,11 +139,17 @@ h1 {
 @media (min-width: 576px) {
     .container {
         max-width: 540px;
+        .display-1{
+            text-transform: none;
+        }
     }
 }
 @media (min-width: 768px) {
     .container {
         max-width: 720px;
+        .display-1{
+            text-transform: none;
+        }
     }
 }
 @media (min-width: 992px) {
