--- a/main.css
+++ b/main.css
@@ -102,6 +102,7 @@ a {
     color: #007bff;
     text-decoration: none;
     background-color: transparent;
+    text-transform: uppercase;
 }
 a:hover {
     color: #0056b3;
@@ -139,17 +140,11 @@ a:not([href]):not([class]):hover {
 @media (min-width: 576px) {
     .container {
         max-width: 540px;
-        .display-1{
-            text-transform: none;
-        }
     }
 }
 @media (min-width: 768px) {
     .container {
         max-width: 720px;
-        .display-1{
-            text-transform: none;
-        }
     }
 }
 @media (min-width: 992px) {
